src/objects/NDTRS_Form_2016__c.object
<CustomObject>
    <description>Record of Treatment - Section D, E, F, G and H of NDTRS 2016 form</description>
    <fields>
        <fullName>AddedBy__c</fullName>
        <formula>Centre_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AddedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Added__c</fullName>
        <formula>CreatedDate</formula>
        <label>Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Aftercare__c</fullName>
        <formula>IF( ISBLANK( X32b10_Date_started__c ) ,&quot;False&quot;,&quot;True&quot;)</formula>
        <inlineHelpText>32a - Structured Aftercare Programme</inlineHelpText>
        <label>Aftercare</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_1st_OpiateSub__c</fullName>
        <formula>X20b_Age_first_received_any_opiate_subst__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age 1st OpiateSub</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_1st_Tx_Alcohol__c</fullName>
        <formula>X19d_Age_first_treated_Alcohol__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age_1st_Tx_Alcohol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_1st_Tx_Drug__c</fullName>
        <formula>X19b_Age_first_treated_Drugs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age_1st_Tx_Drug</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_1st_Tx_OtherProblem__c</fullName>
        <formula>X19b_Age_first_treated_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age_1st_Tx_OtherProblem</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(NOT(ISBLANK( Contact__r.Birthdate)),

FLOOR(( X15_Date_of_initial_assessment__c - Contact__r.Birthdate )/365.25),

99)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AlcUnspecified__c</fullName>
        <formula>IF( INCLUDES( X29a_Preferred_types_of_alcohol_consumed__c , &quot;9. Alcohol unspecified&quot;) , &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AlcUnspecified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlcoholExtSpecify__c</fullName>
        <label>AlcoholExtSpecify</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alcohol_History__c</fullName>
        <formula>Case( X19_History_of_treatment_Alcohol__c , 
&quot;1. Never treated&quot;,&quot;1&quot;, 
&quot;2. Previously treated&quot;,&quot;2&quot;,
&quot;9. Not known&quot;,&quot;9&quot;,
&quot;&quot;)</formula>
        <label>Alcohol_History</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_Outstanding_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any Outstanding Charges?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_other_info_re_use_of_drugs_alcohol__c</fullName>
        <inlineHelpText>Is there any other information about your use of drugs or alcohol that you think we should know?</inlineHelpText>
        <label>Any other info re use of drugs - alcohol</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Are_you_a_parent_or_guardian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are you a parent or guardian?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_you_accessing_a_clinic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Are you accessing a clinic?</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NDTRS_Forms7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Are_you_on_medication_for_mental_health__c</fullName>
        <inlineHelpText>Are you on any medication for your mental health?</inlineHelpText>
        <label>Are you on medication for mental health</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aspect_of_physical_health_worried_about__c</fullName>
        <inlineHelpText>Is there any aspect of your physical health that you are worried about?</inlineHelpText>
        <label>Aspect of physical health worried about</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Outcome__c</fullName>
        <formula>CASE(TEXT(X16_Assessment_outcome__c), 
&quot;1. Suitable for treatment in any drug/alcohol service&quot;,&quot;1&quot;,
&quot;2. Unsuitable for drug or alcohol treatment&quot;,&quot;2&quot;,
&quot;4. Psychiatric assessment only&quot;,&quot;4&quot;,
&quot;3. Referred to another site, no intervention provided in this centre&quot;,&quot;3&quot;,
&quot;&quot;)</formula>
        <label>Assessment Outcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist_Alcohol_Detox1__c</fullName>
        <label>Assist Alcohol Detox1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Medication_used_to_assist_detoxification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assist_Alcohol_Detox2__c</fullName>
        <label>Assist Alcohol Detox2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Medication_used_to_assist_detoxification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assist_Alcohol_Detox3__c</fullName>
        <label>Assist Alcohol Detox3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Medication_used_to_assist_detoxification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assist_Alcohol_Detox_1__c</fullName>
        <formula>RIGHT(TEXT( Assist_Alcohol_Detox1__c ),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assist_Alcohol_Detox_1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist_Alcohol_Detox_2__c</fullName>
        <formula>RIGHT(TEXT(Assist_Alcohol_Detox2__c),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assist_Alcohol_Detox_2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist_Alcohol_Detox_3__c</fullName>
        <formula>RIGHT(TEXT(Assist_Alcohol_Detox3__c),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assist_Alcohol_Detox_3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist_Benzo_Detox1__c</fullName>
        <label>Assist Benzo Detox1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Medication_used_to_assist_detoxification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assist_Benzo_Detox2__c</fullName>
        <label>Assist Benzo Detox2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Medication_used_to_assist_detoxification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assist_Benzo_Detox3__c</fullName>
        <label>Assist Benzo Detox3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Medication_used_to_assist_detoxification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assist_Benzo_Detox_1__c</fullName>
        <formula>RIGHT(TEXT(Assist_Benzo_Detox1__c),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assist_Benzo_Detox_1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist_Benzo_Detox_2__c</fullName>
        <formula>RIGHT(TEXT(Assist_Benzo_Detox2__c),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assist_Benzo_Detox_2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist_Benzo_Detox_3__c</fullName>
        <formula>RIGHT(TEXT(Assist_Benzo_Detox3__c),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assist_Benzo_Detox_3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist_Heroin_Detox1__c</fullName>
        <label>Assist Heroin Detox1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Medication_used_to_assist_detoxification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assist_Heroin_Detox2__c</fullName>
        <label>Assist Heroin Detox2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Medication_used_to_assist_detoxification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assist_Heroin_Detox3__c</fullName>
        <label>Assist Heroin Detox3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Medication_used_to_assist_detoxification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assist_Heroin_Detox_1__c</fullName>
        <formula>RIGHT(TEXT( Assist_Heroin_Detox1__c ),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assist_Heroin_Detox_1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist_Heroin_Detox_2__c</fullName>
        <formula>RIGHT(TEXT( Assist_Heroin_Detox2__c ),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assist_Heroin_Detox_2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist_Heroin_Detox_3__c</fullName>
        <formula>RIGHT(TEXT( Assist_Heroin_Detox3__c ),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assist_Heroin_Detox_3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist_Methadone_Detox1__c</fullName>
        <description>Medication used to assist detoxification</description>
        <inlineHelpText>Medication used to assist detoxification</inlineHelpText>
        <label>Assist Methadone Detox1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Medication_used_to_assist_detoxification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assist_Methadone_Detox2__c</fullName>
        <description>Medication used to assist detoxification</description>
        <inlineHelpText>Medication used to assist detoxification</inlineHelpText>
        <label>Assist Methadone Detox2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Medication_used_to_assist_detoxification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assist_Methadone_Detox3__c</fullName>
        <description>Medication used to assist detoxification</description>
        <inlineHelpText>Medication used to assist detoxification</inlineHelpText>
        <label>Assist Methadone Detox3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Medication_used_to_assist_detoxification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assist_Methadone_Detox_1__c</fullName>
        <formula>RIGHT(TEXT( Assist_Methadone_Detox1__c ),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assist_Methadone_Detox_1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist_Methadone_Detox_2__c</fullName>
        <formula>RIGHT(TEXT( Assist_Methadone_Detox2__c ),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assist_Methadone_Detox_2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist_Methadone_Detox_3__c</fullName>
        <formula>RIGHT(TEXT( Assist_Methadone_Detox3__c ),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assist_Methadone_Detox_3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist_Other_Detox1__c</fullName>
        <label>Assist Other Detox1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Medication_used_to_assist_detoxification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assist_Other_Detox2__c</fullName>
        <label>Assist Other Detox2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Medication_used_to_assist_detoxification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assist_Other_Detox3__c</fullName>
        <label>Assist Other Detox3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Medication_used_to_assist_detoxification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assist_Other_Detox_1__c</fullName>
        <formula>RIGHT(TEXT(Assist_Other_Detox1__c),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assist_Other_Detox_1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist_Other_Detox_2__c</fullName>
        <formula>RIGHT(TEXT(Assist_Other_Detox2__c),6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assist_Other_Detox_2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist_Other_Detox_3__c</fullName>
        <formula>RIGHT(TEXT(Assist_Other_Detox3__c),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assist_Other_Detox_3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist_ZDrugs_Detox1__c</fullName>
        <description>Medication used to assist detoxification</description>
        <inlineHelpText>Medication used to assist detoxification</inlineHelpText>
        <label>Assist ZDrugs Detox1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Medication_used_to_assist_detoxification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assist_ZDrugs_Detox2__c</fullName>
        <description>Medication used to assist detoxification</description>
        <inlineHelpText>Medication used to assist detoxification</inlineHelpText>
        <label>Assist ZDrugs Detox2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Medication_used_to_assist_detoxification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assist_ZDrugs_Detox3__c</fullName>
        <description>Medication used to assist detoxification</description>
        <inlineHelpText>Medication used to assist detoxification</inlineHelpText>
        <label>Assist ZDrugs Detox3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Medication_used_to_assist_detoxification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assist_ZDrugs_Detox_1__c</fullName>
        <formula>RIGHT(TEXT( Assist_ZDrugs_Detox1__c ),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assist_ZDrugs_Detox_1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist_ZDrugs_Detox_2__c</fullName>
        <formula>RIGHT(TEXT( Assist_ZDrugs_Detox2__c ),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assist_ZDrugs_Detox_2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist_ZDrugs_Detox_3__c</fullName>
        <formula>RIGHT(TEXT( Assist_ZDrugs_Detox3__c ),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assist_ZDrugs_Detox_3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BBV1__c</fullName>
        <formula>IF(TEXT( X41_Viral_Screening_uptake__c ) = &quot;1. HIV test&quot;, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BBV1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BBV2__c</fullName>
        <formula>IF(TEXT( X41_Viral_Screening_uptake__c ) = &quot;2. Hepatitis B test&quot;, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BBV2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BBV3__c</fullName>
        <formula>IF(TEXT( X41_Viral_Screening_uptake__c ) = &quot;3. Hepatitis C test&quot;, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BBV3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brief_Intervention__c</fullName>
        <formula>IF( ISBLANK(X32b1_Date_started__c) ,&quot;False&quot;,&quot;True&quot;)</formula>
        <label>Brief_Intervention</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buprenorphine__c</fullName>
        <formula>IF( ISBLANK( X32b16_Date_started__c ),&quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buprenorphine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Plan__c</fullName>
        <formula>IF(ISBLANK( X32b26_Date_started__c ),&quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Care_Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Manager__c</fullName>
        <formula>IF(ISBLANK(  X32b25_Date_started__c  ),&quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case_Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CentreType__c</fullName>
        <formula>RIGHT( TEXT( Centre__c ) , 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CentreType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centre__c</fullName>
        <inlineHelpText>The first five digits are used as the centre number in the HRB report</inlineHelpText>
        <label>Treatment Centre</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10001 - eCass Training Service 14</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Centre_number__c</fullName>
        <formula>if (isblank(text(Centre__c )),  &quot;NO CENTRE NUMBER&quot; , LEFT(text( Centre__c ), 5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Centre number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Age_Injected__c</fullName>
        <formula>MIN(
IF( ISPICKVAL( X21b_Route_of_Admin_Main_drug__c , &quot;1. Inject&quot;), X21d_Age_at_1st_use__c ,88),

IF( ISPICKVAL( X22b_Route_of_Admin_Drug2__c , &quot;1. Inject&quot;), X22d_Age_of_1st_use__c ,88),

IF( ISPICKVAL( X23b_Route_of_Admin_Drug3__c , &quot;1. Inject&quot;), X23d_Age_of_1st_use__c ,88),

IF( ISPICKVAL( X24b_Route_of_Admin_Drug4__c , &quot;1. Inject&quot;), X24d_Age_of_1st_use__c ,88) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Age Injected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CleanDate__c</fullName>
        <label>CleanDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClientSuitable__c</fullName>
        <formula>CASE( TEXT( X17_Where_client_is_suitable_for_treatme__c ) , 
&quot;1. Treatment offered with this centre and client accepted&quot;,&quot;1&quot;,
&quot;10. Treatment offered with this centre and client DID NOT accept&quot;,&quot;10&quot;,
&quot;3. Client did not fulfil criteria to commence treatment&quot;,&quot;3&quot;,
&quot;4. Client commenced treatment with another centre&quot;,&quot;4&quot;,
&quot;5. Service unable to contact/locate client&quot;,&quot;5&quot;,
&quot;7. Client sent to prison&quot;,&quot;7&quot;,
&quot;8. Client died&quot;,&quot;8&quot;,
&quot;9. Other (specify)&quot;,&quot;9&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClientSuitable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NDTRS_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Contact__r.Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complementary__c</fullName>
        <formula>IF( ISBLANK( X32b7_Date_started__c ) ,&quot;False&quot;,&quot;True&quot;)</formula>
        <inlineHelpText>32a - Complementary Therapy</inlineHelpText>
        <label>Complementary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>NDTRS_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counsel_Group__c</fullName>
        <formula>IF( ISBLANK( X32b3_Date_started__c ) ,&quot;False&quot;,&quot;True&quot;)</formula>
        <label>Counsel_Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counsel_Individual__c</fullName>
        <formula>IF( ISBLANK(  X32b2_Date_started__c  ) ,&quot;False&quot;,&quot;True&quot;)</formula>
        <label>Counsel_Individual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Court_Date__c</fullName>
        <label>Court Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_level_of_drug_or_alcohol_use__c</fullName>
        <inlineHelpText>How would you describe your current level of drug or alcohol use?</inlineHelpText>
        <label>Current level of drug or alcohol use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chaotic</fullName>
                </value>
                <value>
                    <fullName>Stable</fullName>
                </value>
                <value>
                    <fullName>Detoxing</fullName>
                </value>
                <value>
                    <fullName>Drug Free</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_in_social_welfare_payments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently in social welfare payments?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_latest_intervention_commenced__c</fullName>
        <inlineHelpText>This will be populated by a trigger and will be the max of the date commenced fields</inlineHelpText>
        <label>Date latest intervention commenced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_linked_in_with_service_1__c</fullName>
        <label>Date linked in with service 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_linked_in_with_service_2__c</fullName>
        <label>Date linked in with service 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_linked_in_with_service_3__c</fullName>
        <label>Date linked in with service 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_linked_with_a_psychiatrist__c</fullName>
        <label>Date linked with a psychiatrist</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Assessment__c</fullName>
        <formula>DATEVALUE(TEXT(X15_Date_of_initial_assessment__c))</formula>
        <label>Date of Assessment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Referral__c</fullName>
        <formula>X12_Date_of_Referral__c</formula>
        <label>Date of Referral</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_received_treatment_1__c</fullName>
        <label>Date received treatment 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_received_treatment_2__c</fullName>
        <label>Date received treatment 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_received_treatment_3__c</fullName>
        <label>Date received treatment 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detox_Alcohol__c</fullName>
        <formula>IF( ISBLANK(X32b17_Date_started__c),&quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detox_Alcohol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detox_Benzo__c</fullName>
        <formula>IF( ISBLANK( X32b20_Date_started__c ),&quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detox_Benzo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detox_Community__c</fullName>
        <formula>IF(ISBLANK(  X32b23_Date_started__c  ),&quot;False&quot;,&quot;True&quot;)</formula>
        <label>Detox_Community</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detox_Heroin__c</fullName>
        <formula>IF(ISBLANK( X32b18_Date_started__c ),&quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detox_Heroin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detox_Methadone__c</fullName>
        <formula>IF(ISBLANK(  X32b19_Date_started__c  ),&quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detox_Methadone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detox_Other_Specify__c</fullName>
        <formula>X32a22_Detox_from_other_drug_Specify__r.Item_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detox_Other _Specify</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detox_Other__c</fullName>
        <formula>IF(ISBLANK(X32b22_Date_started__c),&quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detox_Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detox_Zdrugs__c</fullName>
        <formula>IF(ISBLANK(X32b21_Date_started__c),&quot;False&quot;,&quot;True&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detox_Zdrugs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Difficult_To_Assess__c</fullName>
        <formula>CASE( X28_Difficult_to_assess_main_problem__c , 
&quot;1. Yes&quot;,&quot;1&quot;,
&quot;2. No&quot;,&quot;2&quot;,
&quot;99. Not known&quot;,&quot;99&quot;,
&quot;88. Not applicable&quot;,&quot;88&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difficult_To_Assess</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_another_source_of_income__c</fullName>
        <label>Do you have another source of income?</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_1_Detail__c</fullName>
        <formula>X21a_Main_drug__r.Item_Code__c</formula>
        <label>Drug_1_Detail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drug_1_Frequency__c</fullName>
        <description>Old variable PRIMFREQ</description>
        <formula>Case(X21c_Frequency_of_use_in_last_mth__c, 
&quot;3. Daily&quot;,&quot;3&quot;, 
&quot;6. 4-6 days per week&quot;,&quot;6&quot;,
&quot;7. 2-3 days per week&quot;,&quot;7&quot;,
&quot;1. Once a week or less&quot;,&quot;1&quot;, 
&quot;4. No use in past month&quot;,&quot;4&quot;, 
&quot;9. Not known&quot;,&quot;9&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug_1_Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_1_Route__c</fullName>
        <description>Old variable PRIMRTE</description>
        <formula>/*
Case(X21b_Route_of_Admin_Main_drug__c, 
&quot;1. Inject&quot;,&quot;1&quot;, 
&quot;2. Smoke&quot;,&quot;2&quot;, 
&quot;3. Eat/drink&quot;,&quot;3&quot;, 
&quot;4. Sniff/snort/ inhale&quot;,&quot;4&quot;, 
&quot;5. Sublingual&quot;,&quot;5&quot;, 
&quot;6. Rectal&quot;,&quot;6&quot;, 
&quot;7. Topical&quot;,&quot;7&quot;, 
&quot;9. Not Known&quot;,&quot;9&quot;,
&quot;&quot;)
*/
left(text(X21b_Route_of_Admin_Main_drug__c),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug_1_Route</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_2_Detail__c</fullName>
        <formula>X22a_Drug_2__r.Item_Code__c</formula>
        <label>Drug_2_Detail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drug_2_Frequency__c</fullName>
        <description>Old variable DRUG2FREQ</description>
        <formula>Case( X22c_Frequency_of_use_in_last_mth__c ,
&quot;3. Daily&quot;,&quot;3&quot;,
&quot;6. 4-6 days per week&quot;,&quot;6&quot;,
&quot;7. 2-3 days per week&quot;,&quot;7&quot;,
&quot;1. Once a week or less&quot;,&quot;1&quot;,
&quot;4. No use in past month&quot;,&quot;4&quot;,
&quot;9. Not known&quot;,&quot;9&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug_2_Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_2_Route__c</fullName>
        <description>Old variable DRUG2RTE</description>
        <formula>CASE(TEXT( X22b_Route_of_Admin_Drug2__c),
&quot;1. Inject&quot;,&quot;1&quot;,
&quot;2. Smoke&quot;,&quot;2&quot;,
&quot;3. Eat/drink&quot;,&quot;3&quot;,
&quot;4. Sniff/snort&quot;,&quot;4&quot;,
&quot;6. Rectal&quot;,&quot;6&quot;,
&quot;7. Topical&quot;,&quot;7&quot;,
&quot;9. Not Known&quot;,&quot;9&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug_2_Route</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_3_Detail__c</fullName>
        <formula>X23a_Drug_3__r.Item_Code__c</formula>
        <label>Drug_3_Detail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Drug_3_Frequency__c</fullName>
        <description>Old variable DRUG3FREQ</description>
        <formula>Case( X23c_Frequency_of_use_in_last_mth__c ,
&quot;3. Daily&quot;,&quot;3&quot;,
&quot;6. 4-6 days per week&quot;,&quot;6&quot;,
&quot;7. 2-3 days per week&quot;,&quot;7&quot;,
&quot;1. Once a week or less&quot;,&quot;1&quot;,
&quot;4. No use in past month&quot;,&quot;4&quot;,
&quot;9. Not known&quot;,&quot;9&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug_3_Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_3_Route__c</fullName>
        <description>Old variable DRUG3RTE</description>
        <formula>CASE(X23b_Route_of_Admin_Drug3__c,
&quot;1. Inject&quot;,&quot;1&quot;,
&quot;2. Smoke&quot;,&quot;2&quot;,
&quot;3. Eat/drink&quot;,&quot;3&quot;,
&quot;4. Sniff/snort&quot;,&quot;4&quot;,
&quot;6. Rectal&quot;,&quot;6&quot;,
&quot;7. Topical&quot;,&quot;7&quot;,
&quot;9. Not Known&quot;,&quot;9&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug_3_Route</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_History__c</fullName>
        <formula>if(begins(text(X19_History_of_treatment_Drugs__c), &quot;1&quot;), &quot;1&quot;,
if(begins(text(X19_History_of_treatment_Drugs__c),  &quot;2&quot;), &quot;2&quot;,
if(begins(text(X19_History_of_treatment_Drugs__c), &quot;9&quot;), &quot;9&quot;,
&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug_History</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Episode_Comment__c</fullName>
        <label>Episode Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>